--- a/autism.rmd
+++ b/autism.rmd
@@ -12,15 +12,15 @@ ESSENCE, Gillberg  [@Gillberg2010] Föreläsning
 
 ## Epidemiologi
 
-• ADHD med eller utan ODD/CD (Oppositional/Conduct Problems) 5-7%
-• SLI/LD (Språkstörning inklusive dyslexi) 5%
-• DCD (Developmental Coordination Disorder) 5%
-• ID (Intellectuell dysfunktion) 2%
-• Autisms/ASD med eller utan regression 1.2-1.4% (10-20% regression)
-• ARFID (Avoidant/Restrictive Food Intake Disorder) och vanligt med anorexia/ASD och bulimi/ADHD
-• Tic Disorders/Tourette Syndrome/OCD (Obsessive Compulsive Disorder) 1%
-• Selectiv Mutism (EDA/PDA/ASD closely related?) 0.2-2%
-• RAD/DSED (Reactive Attachment Disorder, Disinhibited Social Engagement Disorder) 0.5-1.5%
+- ADHD med eller utan ODD/CD (Oppositional/Conduct Problems) 5-7%
+- SLI/LD (Språkstörning inklusive dyslexi) 5%
+- DCD (Developmental Coordination Disorder) 5%
+- ID (Intellectuell dysfunktion) 2%
+- Autisms/ASD med eller utan regression 1.2-1.4% (10-20% regression)
+- ARFID (Avoidant/Restrictive Food Intake Disorder) och vanligt med anorexia/ASD och bulimi/ADHD
+- Tic Disorders/Tourette Syndrome/OCD (Obsessive Compulsive Disorder) 1%
+- Selectiv Mutism (EDA/PDA/ASD closely related?) 0.2-2%
+- RAD/DSED (Reactive Attachment Disorder, Disinhibited Social Engagement Disorder) 0.5-1.5%
 
 ## Konsekvenser
 
